Changes to the chatroom service, not final. Added custom exception handling, just a test for now. Todo: improve service checks for memberships etc.