@@ -8,7 +8,7 @@ import dev.al.internship.chatapp.model.entity.ChatRoom;
 import dev.al.internship.chatapp.model.entity.User;
 import dev.al.internship.chatapp.repository.ChatRoomRepository;
 import dev.al.internship.chatapp.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -34,22 +34,58 @@ public class ChatRoomService {
         return chatRoomRepository.findAll();
     }
 
-    public List<ChatRoomDto> getAllChatRoomsDto() {
-        return chatRoomRepository.findAll()
+    public List<ChatRoomDto> getAllChatRoomsDtoWhereMember( Authentication authentication) {
+
+          Optional<User> authUser = userRepository.findByUsername(authentication.getName());
+
+//        List<ChatRoomDto> chatrooms =  chatRoomRepository.findAll()
+//                .stream()
+//                .map(room -> new ChatRoomDto(
+//                        room.getId(),
+//                        room.getName(),
+//                        room.getDescription(),
+//                        getOwner(room.getId()),
+//                        getUsers(room.getId()),
+//                        getMessages(room.getId())
+//                ))
+//                .toList();
+//        return chatrooms;
+        if (authUser.isPresent() ) {
+        return chatRoomRepository.findAllByMemberUsername(authUser.get().getUsername())
                 .stream()
                 .map(room -> new ChatRoomDto(
                         room.getId(),
                         room.getName(),
                         room.getDescription(),
-                        room.getOwnerId(),
-                        getUsers(room.getId()),
-                        getMessages(room.getId())
+                        new UserDto(room.getOwner().getId(),room.getOwner().getUsername(),room.getOwner().getEmail()),
+                        room.getRegisteredUsers()
+                                .stream()
+                                .map(user -> new UserDto(
+                                        user.getId(),
+                                        user.getUsername(),
+                                        user.getEmail()
+                                ))
+                                .collect(Collectors.toSet()),
+
+                        room.getChatMessages()
+                                .stream()
+                                .map(message -> new ChatMessageDto(
+                                        message.getId(),
+                                        message.getMessage(),
+                                        message.getSender(),
+                                        message.getCreationDate(),
+                                        message.getMessageType()
+                                ))
+                                .collect(Collectors.toSet())
                 ))
-                .collect(Collectors.toList());
+                .toList();
+        }else {
+            return null;
+        }
+
     }
 
     public ChatRoom createChatRoom(ChatRoom chatRoom) {
-
         return chatRoomRepository.save(chatRoom);
     }
 
@@ -75,8 +111,31 @@ public class ChatRoomService {
         if(isMember(roomId, user.getUsername())){
             throw new RuntimeException("User is already member");
         }
+        if(getOwner(roomId).getId() == userId){
+            throw new RuntimeException("You are the owner of the room, you can't join this room");
+        }
+
         room.getRegisteredUsers().add(user);
         chatRoomRepository.save(room);
+    }
+
+    public void removeMember(long roomId, long userId, Authentication authentication) {
+        ChatRoom room = getChatRoomById(roomId);
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        Optional<User> authOwner = userRepository.findByUsername(authentication.getName());
+
+        if(room.getOwner().getId() == userId){
+            throw new RuntimeException("Cannot remove owner user "+room.getOwner().getId() + " "+  userId );
+        }
+        if (authOwner.isPresent() && room.getOwner().getId() != authOwner.get().getId()) {
+            throw new RuntimeException("You cannot remove users as you are not the owner of this room" + room.getOwner().getId() + authOwner.get().getId());
+        }else {
+            room.getRegisteredUsers().remove(user);
+            chatRoomRepository.save(room);
+        }
     }
 
     public boolean isMember(long roomId, String username) {
@@ -126,5 +185,17 @@ public class ChatRoomService {
                 )).collect(Collectors.toSet());
 
         return chatMessageDtos;
+    }
+
+    public UserDto getOwner(long roomId) {
+        ChatRoom room = getChatRoomById(roomId);
+
+        UserDto owner = new UserDto(
+                room.getOwner().getId(),
+                room.getOwner().getUsername(),
+                null
+        );
+
+        return owner;
     }
 }
